--- a/vue/pre/正则表达式/13_敏感词过滤.html
+++ b/vue/pre/正则表达式/13_敏感词过滤.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-11-18 11:20:49
+ * @LastEditTime: 2020-11-18 17:22:16
+ * @LastEditors: your name
+ * @Description: In User Settings Edit
+ * @FilePath: \someNotes\vue\pre\正则表达式\13_敏感词过滤.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +18,7 @@
 </body>
 <script>
     window.onload=function () {
-        var arr = ["fuck","老刘","老付","长腿"]
+        var arr = ["fuck","老刘","**","长腿"]
         var left = document.querySelector("#left");
         var right = document.querySelector("#right");
         left.onchange=function(){
