--- a/css3/布局相关/flex案例.html
+++ b/css3/布局相关/flex案例.html
@@ -31,13 +31,13 @@
 				background: url(../img/2.jpg) no-repeat;
 			}
 			#nav>.row:nth-child(1)>.items:nth-child(2)>a::before {
-				background: url(../img/2.jpg) no-repeat;
+				background: url(../img/p2179750131.jpg) no-repeat;
 			}
 			#nav>.row:nth-child(1)>.items:nth-child(3)>a::before {
-				background: url(../img/2.jpg) no-repeat;
+				background: url(../img/p2198253788.jpg) no-repeat;
 			}
 			#nav>.row:nth-child(1)>.items:nth-child(4)>a::before {
-				background: url(../img/2.jpg) no-repeat;
+				background: url(../img/p2234206693.jpg) no-repeat;
 			}
 			#nav>.row:nth-child(1)>.items:nth-child(5)>a::before {
 				background: url(../img/2.jpg) no-repeat;
